Make refreshing the XSRF token conditional on whether the openapi endpoint needs authentication.
